--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,13 +1,51 @@
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
+  <div class="main">
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+      AICU_logo.png
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with menu icon">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon favorite-icon"
+            aria-label="Example icon-button with heart icon">
+      <mat-icon>table_chart</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+      <mat-icon>difference</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+      <mat-icon>insert_chart</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+      <mat-icon>view_in_ar</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+      <mat-icon>model_training</mat-icon>
+    </button>
+  </div>
+  <div class="bottom">
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+      <mat-icon>settings</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+      <mat-icon>logout</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
