--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,16 +1,25 @@
 <mat-form-field class="example-form-field">
-  <mat-label>Clearable input</mat-label>
-  <input matInput type="text" [value]="value()">
+  <mat-label>Enter the name</mat-label>
+  <input matInput
+         type="text"
+         [value]="value()">
   @if (value()) {
-    <button matSuffix mat-icon-button aria-label="Clear" (click)="resetValue()">
-      <mat-icon>close</mat-icon>
-    </button>
+  <button matSuffix
+          mat-icon-button
+          aria-label="Clear"
+          (click)="resetValue()">
+    <mat-icon>close</mat-icon>
+  </button>
   }
 </mat-form-field>
 
-<button mat-raised-button>
-  <mat-icon></mat-icon>
-</button>
-<button mat-flat-button>
-  <mat-icon></mat-icon>
-</button>
+<div class="buttons-wrapper">
+  <button mat-raised-button>
+    Action_1
+    <mat-icon></mat-icon>
+  </button>
+  <button mat-flat-button>
+    Action_2
+    <mat-icon></mat-icon>
+  </button>
+</div>
