--- a/src/app/pages/visual-data-insights/visual-data-insights.component.scss
+++ b/src/app/pages/visual-data-insights/visual-data-insights.component.scss
@@ -4,3 +4,13 @@ h1 {
   text-transform: capitalize;
   font-size: 20pt;
 }
+
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+gridster {
+  flex: 1;
+}
