--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -3,49 +3,66 @@
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with share icon">
-      AICU_logo.png
+      <img src=""
+           alt="AICU logo">
     </button>
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with menu icon">
-      <mat-icon>arrow_back</mat-icon>
+      <a routerLink="/">
+        <mat-icon>arrow_back</mat-icon>
+      </a>
     </button>
     <button mat-icon-button
             class="example-icon favorite-icon"
             aria-label="Example icon-button with heart icon">
-      <mat-icon>table_chart</mat-icon>
+      <a routerLink="/">
+        <mat-icon>table_chart</mat-icon>
+      </a>
     </button>
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with share icon">
-      <mat-icon>difference</mat-icon>
+      <a routerLink="/">
+        <mat-icon>difference</mat-icon>
+      </a>
     </button>
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with share icon">
-      <mat-icon>insert_chart</mat-icon>
+      <a routerLink="/">
+        <mat-icon>insert_chart</mat-icon>
+      </a>
     </button>
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with share icon">
-      <mat-icon>view_in_ar</mat-icon>
+      <a routerLink="/">
+        <mat-icon>view_in_ar</mat-icon>
+      </a>
     </button>
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with share icon">
-      <mat-icon>model_training</mat-icon>
+      <a routerLink="/">
+        <mat-icon>model_training</mat-icon>
+      </a>
     </button>
   </div>
   <div class="bottom">
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with share icon">
-      <mat-icon>settings</mat-icon>
+      <a routerLink="/">
+        <mat-icon>settings</mat-icon>
+      </a>
     </button>
     <button mat-icon-button
             class="example-icon"
             aria-label="Example icon-button with share icon">
-      <mat-icon>logout</mat-icon>
+      <a routerLink="/">
+        <mat-icon>logout</mat-icon>
+      </a>
     </button>
   </div>
 </mat-toolbar>
