mocked plots were added

--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -4,7 +4,7 @@
             class="example-icon"
             aria-label="Example icon-button with share icon">
       <img src=""
-           alt="AICU logo">
+           alt="">
     </button>
     <button mat-icon-button
             class="example-icon"
